# equivariant-preintegration

./: CMakeLists.txt  LICENSE  README.md
include/core/: input.hpp  params.hpp  preintegration.hpp  state.hpp
include/utils/: tools.hpp  types.hpp
tests/: test_common.hpp  test_preintegration.hpp  tests.cpp
